--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "numpy>=2.3.1",
     "pytest>=8.4.1",
     "google-cloud-bigquery>=3.34.0",
+    "flask>=3.1.1",
+    "flask-cors>=6.0.1",
 ]
 requires-python = ">=3.12"
 
