--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "google-cloud-bigquery>=3.34.0",
     "flask>=3.1.1",
     "flask-cors>=6.0.1",
+    "opik>=1.8.23",
 ]
 requires-python = ">=3.12"
 
