--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "flask>=3.1.1",
     "flask-cors>=6.0.1",
     "opik>=1.8.23",
+    "llm-sandbox[docker]>=0.3.17",
 ]
 requires-python = ">=3.12"
 
