--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "flask-cors>=6.0.1",
     "opik>=1.8.23",
     "llm-sandbox[docker]>=0.3.17",
+    "minio>=7.2.0",
+    "uuid>=1.30",
 ]
 requires-python = ">=3.12"
 
