add service account credentials env variable

--- a/agent-gateway/.env.example
+++ b/agent-gateway/.env.example
@@ -22,3 +22,6 @@ BIGQUERY_AGENT_MODEL='gemini-2.5-flash'
 BASELINE_NL2SQL_MODEL='gemini-2.5-flash'
 CHASE_NL2SQL_MODEL='gemini-2.5-flash'
 BQML_AGENT_MODEL='gemini-2.5-flash'
+
+# GCP credentials
+GOOGLE_APPLICATION_CREDENTIALS=./cretendials.json
