--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "setup": "pm2 start ecosystem.setup.config.js",
+    "list": "pm2 list",
     "dev": "pm2 start ecosystem.config.js",
     "logs": "pm2 logs",
     "stop": "pm2 stop ecosystem.config.js",
