--- a/agent-gateway/pyproject.toml
+++ b/agent-gateway/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "llm-sandbox[docker]>=0.3.17",
     "minio>=7.2.0",
     "uuid>=1.30",
+    "matplotlib>=3.10.5",
+    "scipy>=1.16.1",
 ]
 requires-python = ">=3.12"
 
