--- a/aigis-backend/pyproject.toml
+++ b/aigis-backend/pyproject.toml
@@ -6,9 +6,14 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.116.1",
+    "grandalf>=0.8",
+    "ipykernel>=6.30.1",
+    "ipython>=9.4.0",
     "langchain>=0.3.27",
+    "langchain-community>=0.3.27",
     "langchain-deepseek>=0.1.4",
     "langgraph>=0.6.5",
     "python-dotenv>=1.1.1",
     "uvicorn>=0.35.0",
+    "wikipedia>=1.4.0",
 ]
