--- a/aigis-backend/pyproject.toml
+++ b/aigis-backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain-community>=0.3.27",
     "langchain-deepseek>=0.1.4",
     "langgraph>=0.6.5",
+    "opik>=1.8.33",
     "python-dotenv>=1.1.1",
     "uvicorn>=0.35.0",
     "wikipedia>=1.4.0",
