--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "langgraph>=0.6.5",
     "opik>=1.8.33",
     "python-dotenv>=1.1.1",
+    "ruff>=0.12.10",
     "uvicorn>=0.35.0",
     "wikipedia>=1.4.0",
 ]
