--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "alembic>=1.13.0",
     "bcrypt>=4.1.0",
     "cython>=3.1.3",
+    "email-validator>=2.2.0",
     "fastapi>=0.116.1",
     "grandalf>=0.8",
+    "httpx>=0.28.1",
     "ipykernel>=6.30.1",
     "ipython>=9.4.0",
     "langchain>=0.3.27",
@@ -19,6 +21,7 @@ dependencies = [
     "opik>=1.8.33",
     "passlib[bcrypt]>=1.7.4",
     "psycopg2-binary>=2.9.9",
+    "pytest>=8.4.1",
     "python-dotenv>=1.1.1",
     "python-jose[cryptography]>=3.3.0",
     "python-multipart>=0.0.6",
