--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.14.1",
+    "react-vega": "^7.7.1",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "vega-lite": "^6.2.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
