--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "vega": "^6.1.2",
     "vega-lite": "^6.2.0",
     "zod": "^4.0.17"
   },
