--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,15 @@
-## AGENT GATEWAY
-
-# Models
-DEEPSEEK_API_KEY=
-
-GOOGLE_GENAI_USE_VERTEXAI=1
-
-# Vertex backend config
-GOOGLE_CLOUD_PROJECT=YOUR_VALUE_HERE
-GOOGLE_CLOUD_LOCATION=YOUR_VALUE_HERE
-
-# SQLGen method
-NL2SQL_METHOD="BASELINE" # BASELINE or CHASE
-
-# Set up BigQuery Agent
-BQ_COMPUTE_PROJECT_ID=YOUR_VALUE_HERE
-BQ_DATA_PROJECT_ID=YOUR_VALUE_HERE
-BQ_DATASET_ID=YOUR_VALUE_HERE
-
-# Models used in Agents
-ROOT_AGENT_MODEL='gemini-2.5-flash'
-ANALYTICS_AGENT_MODEL='gemini-2.5-flash'
-BIGQUERY_AGENT_MODEL='gemini-2.5-flash'
-BASELINE_NL2SQL_MODEL='gemini-2.5-flash'
-CHASE_NL2SQL_MODEL='gemini-2.5-flash'
-BQML_AGENT_MODEL='gemini-2.5-flash'
-
-# ------------------------------------------
-
-## MinIO
-
 MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 MINIO_HOST=localhost
+
+POSTGRES_DB=aigis_governance
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+
+DEEPSEEK_API_KEY=
+TAVILY_API_KEY=
+LM_STUDIO_ENDPOINT=
+
+MASTER_ENCRYPTION_KEY=
+
+ENABLE_OPIK_TRACER=0
