--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,4 +33,4 @@ EXPOSE 8000
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
 # Default CMD can be overridden by docker-compose or `docker run`
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uv", "run", "-m", "app.main"]
