--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,8 @@ services:
       ENABLE_OPIK_TRACER: ${ENABLE_OPIK_TRACER:-0}
     volumes:
       - ./backend:/app
+      # Use an anonymous volume for /app/.venv so the host .venv is not mounted into the container
+      - /app/.venv
     healthcheck:
       test: ["CMD-SHELL", "curl -fsS http://localhost:8000/health || exit 1"]
       interval: 10s
