add support for gemini 2.5 pro and gpt 5

--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,15 @@ POSTGRES_DB=aigis_governance
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
-DEEPSEEK_API_KEY=
 TAVILY_API_KEY=
-LM_STUDIO_ENDPOINT=
 
 MASTER_ENCRYPTION_KEY=
 SECRET_KEY=
 
 ENABLE_OPIK_TRACER=0
+
+# LLMs
+DEEPSEEK_API_KEY=
+LM_STUDIO_ENDPOINT=
+GOOGLE_API_KEY=
+OPENAI_API_KEY=
