--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
     "langchain-deepseek>=0.1.4",
+    "langchain-google-genai>=2.1.10",
+    "langchain-openai>=0.3.30",
     "langgraph>=0.6.5",
     "opik>=1.8.33",
     "passlib[bcrypt]>=1.7.4",
