--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,23 @@
-FROM node:22-alpine
-
+FROM node:22-alpine AS build
 WORKDIR /app
 
 # Install dependencies
 COPY package.json package-lock.json* ./
 RUN npm ci --silent || npm install --silent
 
-# Copy source
+# Copy source and build
 COPY . /app
+RUN npm run build
 
-EXPOSE 3000
+# Serve stage
+FROM nginx:alpine
 
-CMD ["npm", "run", "dev"]
+# Copy built assets
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# SPA fallback config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
